--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
     "clsx": "^2.0.0",
+    "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
+    "tw-elements-react": "^1.0.0-alpha2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
