--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "@fullcalendar/core": "^6.1.10",
     "@fullcalendar/daygrid": "^6.1.10",
     "@fullcalendar/react": "^6.1.10",
+    "@grammarly/editor-sdk-react": "^2.5.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tinymce/tinymce-react": "^4.3.2",
     "axios": "^1.6.2",
     "clsx": "^2.0.0",
     "cors": "^2.8.5",
